Updated CSS file

--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/"><i class="fa fa-fort-awesome"></i> My Games</a>
+      <a class="navbar-brand" href="/"><i class="fa fa-handshake-o"></i> Business Contact</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -35,10 +35,10 @@
 
         <% if(typeof displayName == 'string' && displayName) { %>
           <% if(title == "Business") { %>
-          <li class="active"><a href="/businesses"><i class="fa fa-gamepad fa-lg">
+          <li class="active"><a href="/businesses"><i class="fa fa-id-card-o">
           </i> Business Contact List</a></li>
           <% } else { %>
-            <li><a href="/businesses"><i class="fa fa-gamepad fa-lg">
+            <li><a href="/businesses"><i class="fa fa-id-card-o">
             </i> Business Contact List</a></li>
           <% } %>
         <% } %>
