--- a/server/views/partials/footer.ejs
+++ b/server/views/partials/footer.ejs
@@ -1,15 +1,33 @@
-
+<!--
+    footer.ejs
+    Author: Angela Liu
+    Website name: Business Contact List
+    Description: footer
+-->
+<!-- Social Footer, Colour Matching Icons -->
+<!-- Include Font Awesome Stylesheet in Header -->
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-MfvZlkHCEqatNoGiOXveE8FIwMzZg4W85qfrfIFBfYc= sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+<link rel='stylesheet' href='/Content/app.css'/>                                        <!-- Template style -->
+<!-- // -->
 <nav class="navbar navbar-inverse navbar-fixed-bottom">
-  <div class="container">
-    <h4  class="navbar-text">&copy; 2017 All Rights Reserved.</h4>
-  </div>
+     <div class=".tm-footer">
+        <div class="text-center center-block">
+            <p class=".tm-copyright-text" >&copy; 2017 Angela Liu (300714839) All Rights Reserved.</p>
+              <a href="https://www.facebook.com/bootsnipp"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
+	            <a href="https://twitter.com/bootsnipp"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i>  </a>
+	            <a href="https://plus.google.com/+Bootsnipp-page"><i id="social-gp" class="fa fa-google-plus-square fa-3x social"></i>  </a>
+	            <a href="mailto:bootsnipp@gmail.com"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i>  </a>
+       </div>
+   </div>
+</div>
 </nav>
-
 
 
 <!-- JAVASCRIPT SECTION -->
     <script src="/Scripts/lib/jquery/dist/jquery.min.js"></script>
     <script src="/Scripts/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/Scripts/app.js"></script>
+    <script src="/Scripts/tether.min.js"></script>
   </body>
 </html>
