Added CSS file and Update index

--- a/server/views/content/index.ejs
+++ b/server/views/content/index.ejs
@@ -2,18 +2,44 @@
 
     <!-- MAIN CONTENT -->
     <div class="container">
-      <div class="row">
-        <div class="col-md-offset-3 col-md-6">
-          <h1><%= title %></h1>
-          <% if(displayName) { %>
-            <h2>Welcome <%= title %>, <%= displayName %></h2>
-          <% } else { %>
-            <h2>Welcome to <%= title %></h2>
-          <% } %>
-        </div>
-      </div>
-    </div>
-
+			<div id="header">
+				<div class="wrap">
+			<div class="sub-header">
+				<img src="Images/monitor.png" alt="" width="310" class="mac" />
+				<div class="desp"><h1>Our Best Business</h1>
+					<p>Create	a	secure	area	of	your	portfolio	site	that	displays	a	list	of	business	contacts.	You	will	have	to	provide	a	username	and	password	to	access	this	area.	The	Contact	List	and	your	authentication	credentials	will	exist	in	a	MongoDB	database.	You	will	be	able	to	perform	full	CRUD	for	your	contact	list	so	you	will	need	to	create	all	required	views.
+          This	Secure	Area	must	include	the	following	components	–	a	user	Login	View,	a	Business	Contacts	List	View	and	an	Update	View.</p>
+				</div>
+				<div class="clear"></div>
+			</div>
+		</div>
+		</div>
+		<div id="main">
+			<div class="wrap">
+			<div class="content">
+				<div id="article">
+					<h2>Corporate Business Contact</h2>
+					<div id="prev"><img src="Images/corporate.png" alt="" /></div>
+					<p>Create	a	secure	area	of	your	portfolio	site	that	displays	a	list	of	business	contacts.	You	will	have	to	provide	a	username	and	password	to	access	this	area.	The	Contact	List	and	your	authentication	credentials	will	exist	in	a	MongoDB	database.	You	will	be	able	to	perform	full	CRUD	for	your	contact	list	so	you	will	need	to	create	all	required	views.
+          This	Secure	Area	must	include	the	following	components	–	a	user	Login	View,	a	Business	Contacts	List	View	and	an	Update	View.</p>
+				<div class="clear"></div>
+				</div>
+			</div>
+			<div class="sidebar">
+				<div class="sub-sidebar">
+				<h2>Useful Link</h2>
+				<ul class="sub-nav">
+          <li><a href="http://google.com" class="tm-text-link">Google</a></li>
+          <li><a href="https://www.mongodb.com/" class="tm-text-link">MongoBD</a></li>
+          <li><a href="https://nodejs.org/en/" class="tm-text-link">NodeJS</a></li>
+          <li><a href="http://expressjs.com/" class="tm-text-link">Express</a></li>
+          <li><a href="http://getbootstrap.com/" class="tm-text-link">GetBootstrap</a></li>
+				</ul></div>
+			
+			</div>
+		</div>
+			<div class="clear"></div>
+		</div>
 <% include ../partials/footer.ejs %>
 
 
