--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -38,19 +38,13 @@
           <li class="active"><a href="/businesses"><i class="fa fa-id-card-o">
           </i> Business Contact List</a></li>
           <% } else { %>
-            <li><a href="/businesses"><i class="fa fa-id-card-o">
+            <li class="active"><a href="/businesses"><i class="fa fa-id-card-o">
             </i> Business Contact List</a></li>
           <% } %>
         <% } %>
 
-        <% if(title == "Contact") { %>
-          <li class="active"><a href="/contact"><i class="fa fa-phone fa-lg"></i> Contact</a></li>
-        <% } else { %>
-          <li><a href="/contact"><i class="fa fa-phone fa-lg"></i> Contact</a></li>
-        <% } %>
-
         <% if(typeof displayName == 'string' && displayName) { %>
-          <li class="navbar-text"><i class="fa fa-user"></i> Welcome, <%= displayName %></li>
+          <li class="active"><i class="fa fa-user"></i> Welcome, <%= displayName %></li>
           <li><a href="/logout"><i class="fa fa-sign-out"></i> Logout</a></li>
         <% } else { %>
           <li><a href="/login"><i class="fa fa-sign-in"></i> Login</a></li>
