Fix image error

--- a/server/views/content/index.ejs
+++ b/server/views/content/index.ejs
@@ -19,7 +19,7 @@
 			<div class="content">
 				<div id="article">
 					<h2>Corporate Business Contact</h2>
-					<div id="prev"><img src="Images/corporate.png" alt="" /></div>
+					<div id="prev"><img src="Images/monitor.png" alt="" /></div>
 					<p>Create	a	secure	area	of	your	portfolio	site	that	displays	a	list	of	business	contacts.	You	will	have	to	provide	a	username	and	password	to	access	this	area.	The	Contact	List	and	your	authentication	credentials	will	exist	in	a	MongoDB	database.	You	will	be	able	to	perform	full	CRUD	for	your	contact	list	so	you	will	need	to	create	all	required	views.
           This	Secure	Area	must	include	the	following	components	–	a	user	Login	View,	a	Business	Contacts	List	View	and	an	Update	View.</p>
 				<div class="clear"></div>
